use Math.clamp if possible